--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.15.2",
     "jquery": "^2.2.0",
     "jsdom": "^7.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
